added ids/classes to food images

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         <div class="ui grid">
             <div class="six wide column">
                 <!--food-->
-                    <img class="ui fluid image" src="dairy.png" alt="Food Groups">
-                    <img class="ui fliud image" src="veggies.png">
-                                        <img class="ui fliud image" src="carbs.png">
-                    <img class="ui fliud image" src="fruits.png">
-                    <img class="ui fliud image" src="fats.png">
+                    <img class="ui small centered image food-image" src="dairy.png" alt="Food Groups" id="dairy-icon">
+                    <img class="ui small centered image food-image" src="veggies.png" id="veggie-icon">
+                    <img class="ui small centered image food-image" src="carbs.png" id="carb-icon">
+                    <img class="ui small centered image food-image" src="fruits.png" id="fruit-icon">
+                    <img class="ui small centered image food-image" src="fats.png" id="fat-icon">
 
 
             </div>
             <div class="six wide column">
                 <!--plate-->
-                <img class="ui fluid image" src="plate.png" alt="plate">
+                <img class="ui fluid image" src="plate.png" alt="plate" id='plate-image'>
             </div>
             <div class="four wide column">
                 <p>pet</p>
