added plate image id

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             
                 <!--plate-->
                 <div class="six wide center aligned column">
-                        <img class="ui fluid image" src="plateFork.png" alt="plate">
+                        <img class="ui fluid image" src="plateFork.png" alt="plate" id="plate-image">
                     <div class="row"><br></div>
                     <div class="center aligned row">
                         <button class="ui primary  floated button">Save</button>
