updated food icon ids to match image names

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                                 <div class= "ui fluid image">
                                     <i class="ui left corner label"> 3 </i>
-                                    <img class="ui small centered image food-image" src="fats.png" id="fat-icon">
+                                    <img class="ui small centered image food-image" src="fats.png" id="fats-icon">
                                 </div>
 
                             </div>
@@ -76,7 +76,7 @@
                             <div class="column"> <!-- veggie column-->
                                 <div class="row">
                                     <div class = "column">
-                                        <img class="ui small centered image food-image" src="veggies.png" id="veggie-icon">
+                                        <img class="ui small centered image food-image" src="veggies.png" id="veggies-icon">
                                     </div>
                                     <div class="column">
                                         <h4 class="ui header">3</h4>
@@ -89,7 +89,7 @@
                             <div class="column">
                                 <div class="row">
                                     <div class="column">
-                                        <img class="ui small centered image food-image" src="carbs.png" id="carb-icon">
+                                        <img class="ui small centered image food-image" src="carbs.png" id="carbs-icon">
                                     </div>
                                     <div class="column">
                                         <h4 class="ui header">3</h4>
@@ -99,7 +99,7 @@
                             <div class="column">
                                 <div class="row">
                                     <div class="column">
-                                        <img class="ui small centered image food-image" src="fruits.png" id="fruit-icon">
+                                        <img class="ui small centered image food-image" src="fruits.png" id="fruits-icon">
                                     </div>
                                     <div class="column">
                                         <h4 class="ui header">3</h4>
