made login prettier

--- a/login.html
+++ b/login.html
@@ -23,31 +23,34 @@
 
     <body>
         <div class="ui eight column centered grid">
-            <div class="centered row" id="login-heading">  
-            Login          
+            <div class="centered row"> 
+                <img class="ui image" src="dog.jpg" alt="dog"> 
+            </div>
+            <div class="centered row" id="login-heading">
+                Login
             </div>
             <div class="centered row" id="user-row">
                 <div class="ui two wide center aligned column">
-                    <button class="ui icon button" id="dora-login">
-                        <i class="big user icon"></i>
+                    <button class="ui icon login button" id="dora">
+                        <i class="big asterisk icon"></i>
                         <br><br> Dora
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon button" id="joy-login">
-                        <i class="big user icon"></i>
+                    <button class="ui icon login button" id="joy">
+                        <i class="big smile icon"></i>
                         <br><br> Joy
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon button" id="rena-login">
-                        <i class="big user icon"></i>
+                    <button class="ui icon login button" id="rena">
+                        <i class="big star icon"></i>
                         <br><br> Rena
                     </button>
                 </div>
                 <div class="two wide center aligned column">
-                    <button class="ui icon button" id="sanjana-login">
-                        <i class="big user icon"></i>
+                    <button class="ui icon login button" id="sanjana">
+                        <i class="big heart icon"></i>
                         <br><br> Sanjana
                     </button>
                 </div>
@@ -55,7 +58,7 @@
         </div>
 
         <div class="small ui modal">
-            <div class="header">Dora</div>
+            <div class="header">Dora: Please enter your password!</div>
             <div class="content">
                 <div class="ui grid">
                     <div class="centered row">
