changed elements to four-letter food group names

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="row"> <!--big row-->
                             <div class="centered column">
                                 <div class= "ui fluid image" id ="fats-icon-div">
-                                    <i class="ui left corner label" id="fatCount"></i>
+                                    <i class="ui left corner label" id="fatsCount"></i>
                                     <img class="ui small centered image food-image" src="fats.png" id="fats-icon">
                                 </div>
 
@@ -58,10 +58,10 @@
 
                                     <div id = "dairy-div">
                                         <div class="column">
-                                            <img class="ui small centered image food-image" src="dairy.png" id="dairy-icon">
+                                            <img class="ui small centered image food-image" src="dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="dairyCount"></p>
+                                            <p class="ui header" id="dairCount"></p>
                                         </div>
                                     </div>
                                 </div>
@@ -70,10 +70,10 @@
                             <div class="column"> <!-- veggie column-->
                                 <div class="row">
                                     <div class = "column">
-                                        <img class="ui small centered image food-image" src="veggies.png" id="veggies-icon">
+                                        <img class="ui small centered image food-image" src="vegg.png" id="vegg-icon">
                                     </div>
                                     <div class="column">
-                                        <p class="ui header" id="vegCount"></p>
+                                        <p class="ui header" id="veggCount"></p>
                                     </div>
                                 </div>
                             </div>
@@ -83,7 +83,7 @@
                             <div class="column">
                                 <div class="row">
                                     <div class="column">
-                                        <img class="ui small centered image food-image" src="carbs.png" id="carbs-icon">
+                                        <img class="ui small centered image food-image" src="carb.png" id="carb-icon">
                                     </div>
                                     <div class="column">
                                         <p class="ui header" id = "carbCount"></p>
@@ -93,10 +93,10 @@
                             <div class="column">
                                 <div class="row">
                                     <div class="column">
-                                        <img class="ui small centered image food-image" src="fruits.png" id="fruits-icon">
+                                        <img class="ui small centered image food-image" src="frui.png" id="frui-icon">
                                     </div>
                                     <div class="column">
-                                        <p class="ui header" id="fruitCount"></p>
+                                        <p class="ui header" id="fruiCount"></p>
                                     </div>
                                 </div>
                             </div>
