dragging for all food groups

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="column"> <!--dairy column-->
                                 <div class="row">
 
-                                    <div id = "dairy-div">
+                                    <div id = "dair-icon-div">
                                         <div class="column">
                                             <img class="ui small centered image food-image" src="dair.png" id="dair-icon">
                                         </div>
@@ -64,40 +64,58 @@
                                             <p class="ui header" id="dairCount"></p>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
 
                             <div class="column"> <!-- veggie column-->
                                 <div class="row">
-                                    <div class = "column">
-                                        <img class="ui small centered image food-image" src="vegg.png" id="vegg-icon">
+
+                                    <div id = "vegg-icon-div">
+
+                                        <div class = "column">
+                                            <img class="ui small centered image food-image" src="vegg.png" id="vegg-icon">
+                                        </div>
+                                        <div class="column">
+                                            <p class="ui header" id="veggCount"></p>
+                                        </div>
                                     </div>
-                                    <div class="column">
-                                        <p class="ui header" id="veggCount"></p>
-                                    </div>
+
                                 </div>
                             </div>
+
                         </div>
                         
                         <div class="row"> <!--big row-->
                             <div class="column">
                                 <div class="row">
-                                    <div class="column">
-                                        <img class="ui small centered image food-image" src="carb.png" id="carb-icon">
+
+                                    <div id = "carb-icon-div">
+
+                                        <div class="column">
+                                            <img class="ui small centered image food-image" src="carb.png" id="carb-icon">
+                                        </div>
+                                        <div class="column">
+                                            <p class="ui header" id = "carbCount"></p>
+                                        </div>
                                     </div>
-                                    <div class="column">
-                                        <p class="ui header" id = "carbCount"></p>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="row">
-                                    <div class="column">
-                                        <img class="ui small centered image food-image" src="frui.png" id="frui-icon">
+
+                                    <div id = "frui-icon-div">
+
+                                        <div class="column">
+                                            <img class="ui small centered image food-image" src="frui.png" id="frui-icon">
+                                        </div>
+                                        <div class="column">
+                                            <p class="ui header" id="fruiCount"></p>
+                                        </div>
+
                                     </div>
-                                    <div class="column">
-                                        <p class="ui header" id="fruiCount"></p>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
