fixed incrementing of stars

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                 <div class="six wide middle aligned column">
                         <img class="ui fluid image" src="plateFork.png" alt="plate" id="plate-image">
                     <div class="row"><br></div>
-                    <!--div class="center aligned row">
-                        <button class="ui primary floated button">Save</button>
-                    </div-->
+                    <div class="center aligned row">
+                        <button class="ui primary floated button" id = "saveButton">Save</button>
+                    </div>
                 </div>
 
                 <div class="one wide column">
