--- a/login.html
+++ b/login.html
@@ -77,6 +77,8 @@
                             <button class="huge circular ui icon button" id="3">3</button>
                         </div>
                     </div>
+                    <div class="centered row" id="wrong-password">
+                    </div>
                 </div>
             </div>
 <!--             <div class="image content">
