made login modal prettier

--- a/login.html
+++ b/login.html
@@ -58,7 +58,13 @@
         </div>
 
         <div class="small ui modal">
-            <div class="header">Dora: Please enter your password!</div>
+            <div class="header">
+                <center>
+                    <i class="big asterisk icon"></i><br>
+                    Please enter your password!
+                </center>
+            </div>
+
             <div class="content">
                 <div class="ui grid">
                     <div class="centered row">
