--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <div class="ui three item pointing menu">
-            <a class="active item">Food</a>
+            <a class="active item"><img src="graphics/frui.png"></a>
             <a class="item" href="pet.html"><img src="graphics/dogHead.png"></a>
             <a class="item">Other</a>
         </div>
