fix labelling on food imgs

--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
                     <div class="ui two column grid">
                 
                         <div class="row"> <!--big row-->
+
                             <div class="centered column">
-                                <div class= "ui fluid image" id ="fats-icon-div">
-                                    <i class="ui left corner label" id="fatsCount"></i>
-                                    <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
+                                <div class="row">
+                                
+                                    <div class= "ui fluid image" id ="fats-icon-div">
+                                        <div class="column">
+                                            <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
+                                        </div>
+                                        <div class="column">
+                                            <p class="ui header" id="fatsCount"></p>
+                                        </div>
+                                    </div>
                                 </div>
 
                             </div>
