fix image names

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     <body>
         <div class="ui eight column centered grid">
             <div class="centered row"> 
-                <img class="ui image" src="dog.jpg" alt="dog"> 
+                <img class="ui image" src="graphics/dog.jpg" alt="dog"> 
             </div>
             <div class="centered row" id="login-heading">
                 Login
