changed formatting of index

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </a>
         </div-->
 
-        <div class="ui grid">
-                <div class="five wide column">
+        <div class="ui centered grid">
+                <div class="four wide column">
                     <div class="ui two column grid">
                 
                         <div class="row"> <!--big row-->
@@ -139,9 +139,9 @@
                         <button class="ui primary floated button" id = "saveButton">Save</button>
                     </div>
                 </div>
-
+<!-- 
                 <div class="one wide column">
-                </div>
+                </div> -->
                 <!--pet-->
                 <div class="three wide middle aligned column">
                     <div class="ui centered card">
@@ -157,6 +157,6 @@
                 </div>
 
 
-                <div class="one wide column">
-                </div>
+<!--                 <div class="one wide column">
+                </div> -->
     </body>
