--- a/login.html
+++ b/login.html
@@ -69,18 +69,18 @@
                 <div class="ui grid">
                     <div class="centered row">
                         <div class="two wide center aligned column">
-                            <button class="huge circular ui icon button" id="0">0</button>
+                            <button class="massive circular ui icon button" id="0"></button>
                         </div>
                         <div class="two wide center aligned column">
-                            <button class="huge circular ui icon button" id="1">1</button>
+                            <button class="massive circular ui icon button" id="1"></button>
                         </div>
                     </div>
                     <div class="centered row">
                         <div class="two wide center aligned column">
-                            <button class="huge circular ui icon button" id="2">2</button>
+                            <button class="massive circular ui icon button" id="2"></button>
                         </div>
                         <div class="two wide center aligned column">
-                            <button class="huge circular ui icon button" id="3">3</button>
+                            <button class="massive circular ui icon button" id="3"></button>
                         </div>
                     </div>
                     <div class="centered row" id="wrong-password">
