fixed styling on index pet pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         
         <!-- css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css" type="text/css" charset="utf-8">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="pet_css.css">
+
 
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -136,12 +137,10 @@
                         <img class="ui fluid image" src="graphics/plateFork.png" alt="plate" id="plate-image">
                     <div class="row"><br></div>
                     <div class="center aligned row">
-                        <button class="ui primary floated button" id = "saveButton">Save</button>
+                        <button class="ui primary right floated button" id = "saveButton">Save</button>
                     </div>
                 </div>
-<!-- 
-                <div class="one wide column">
-                </div> -->
+
                 <!--pet-->
                 <div class="three wide middle aligned column">
                     <div class="ui centered card">
@@ -155,8 +154,4 @@
 
                     <img class="ui fluid image" src="graphics/dog.jpg" alt="dog">
                 </div>
-
-
-<!--                 <div class="one wide column">
-                </div> -->
     </body>
