--- a/pet.html
+++ b/pet.html
@@ -31,24 +31,19 @@
 
 <div class="container">
 	<div class="ui centered middle aligned grid">
-		<div class="one wide column">
-		</div>
+
 		<div class="four wide column">
 			<div class="ui big teal progress" data-percent="20">
   				<div class="bar">
   				</div>
 			</div>
 		</div>
-		<div class="one wide column">
+
+		<div class="six wide column">
+			<img id="petImg" class="ui medium centered image" src="graphics/pet.jpg">
 		</div>
-		<div class="four wide column">
-			<div class="container" id="petContainer">
-				<div id="petDiv"><img id="petImg" class="ui medium centered image" src="graphics/pet.jpg"></div>
-			</div>
-		</div>
-		<div class="one wide column">
-		</div>
-		<div class="four wide column">
+
+		<div class="three wide column">
 			<div class="ui centered card">
 				<div class="content">
 					<img class="left floated tiny ui image" src="graphics/star.jpeg">
@@ -90,8 +85,8 @@
 				
 			</div>
 		</div>
-		<div class="one wide column">
-		</div>
+	<!-- 	<div class="one wide column">
+		</div> -->
 	</div>
 </div>
 
