add health bar icons

--- a/pet.html
+++ b/pet.html
@@ -33,6 +33,14 @@
 	<div class="ui centered middle aligned grid">
 
 		<div class="four wide column">
+			<div class="ui grid">
+				<div class="two wide column">
+					<i class="frown right aligned big icon"></i>
+				</div>
+				<div class="two wide right floated column">
+					<i class="smile center aligned big icon"></i>
+				</div>
+			</div>
 			<div class="ui big teal progress" data-percent="20">
   				<div class="bar">
   				</div>
