--- a/pet.html
+++ b/pet.html
@@ -40,7 +40,10 @@
 		</div>
 
 		<div class="six wide column">
-			<img id="petImg" class="ui medium centered image" src="graphics/pet.jpg">
+		<!-- <img id="petImg" class="ui medium centered image" src="graphics/pet.jpg"> -->
+			<div class="container" id="petContainer">
+				<div id="petDiv"><img id="petImg" class="ui medium centered image" src="graphics/pet.jpg"></div>
+			</div>
 		</div>
 
 		<div class="three wide column">
