fix health bar icon alignment

--- a/pet.html
+++ b/pet.html
@@ -34,11 +34,11 @@
 
 		<div class="four wide column">
 			<div class="ui grid">
-				<div class="two wide column">
-					<i class="frown right aligned big icon"></i>
+				<div class="two wide left floated column">
+					<i class="frown big icon"></i>
 				</div>
 				<div class="two wide right floated column">
-					<i class="smile center aligned big icon"></i>
+					<i class="smile big icon"></i>
 				</div>
 			</div>
 			<div class="ui big teal progress" data-percent="20">
