centered dog on pet page

--- a/pet.html
+++ b/pet.html
@@ -47,10 +47,9 @@
 			</div>
 		</div>
 
-		<div class="six wide column">
-		<!-- <img id="petImg" class="ui medium centered image" src="graphics/pet.jpg"> -->
-			<div class="container" id="petContainer">
-				<div id="petDiv"><img id="petImg" class="ui medium centered image" src="graphics/pet.jpg"></div>
+		<div class="six wide column" id="pet">
+			<div class="container" id="petDiv">
+				<img id="petImg" class="ui medium centered image" src="graphics/pet.jpg">
 			</div>
 		</div>
 
