fix stars count

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                             <img class="ui small centered image food-image" src="graphics/fats.png" id="fats-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="fatsCount"></p>
+                                            <p class="ui header" id="fatsCount">1</p>
                                         </div>
                                     </div>
                                 </div>
@@ -70,7 +70,7 @@
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="dairCount"></p>
+                                            <p class="ui header" id="dairCount">4</p>
                                         </div>
                                     </div>
 
@@ -86,7 +86,7 @@
                                             <img class="ui small centered image food-image" src="graphics/vegg.png" id="vegg-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="veggCount"></p>
+                                            <p class="ui header" id="veggCount">5</p>
                                         </div>
                                     </div>
 
@@ -105,7 +105,7 @@
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id = "carbCount"></p>
+                                            <p class="ui header" id = "carbCount">3</p>
                                         </div>
                                     </div>
 
@@ -120,7 +120,7 @@
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
                                         </div>
                                         <div class="column">
-                                            <p class="ui header" id="fruiCount"></p>
+                                            <p class="ui header" id="fruiCount">5</p>
                                         </div>
 
                                     </div>
