fixed resizing issues when creating new food icons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="column"> <!--dairy column-->
                                 <div class="row">
 
-                                    <div id = "dair-icon-div">
+                                    <div class="ui fluid image" id = "dair-icon-div">
                                         <div class="column">
                                             <img class="ui small centered image food-image" src="graphics/dair.png" id="dair-icon">
                                         </div>
@@ -80,7 +80,7 @@
                             <div class="column"> <!-- veggie column-->
                                 <div class="row">
 
-                                    <div id = "vegg-icon-div">
+                                    <div class="ui fluid image" id = "vegg-icon-div">
 
                                         <div class = "column">
                                             <img class="ui small centered image food-image" src="graphics/vegg.png" id="vegg-icon">
@@ -99,7 +99,7 @@
                             <div class="column">
                                 <div class="row">
 
-                                    <div id = "carb-icon-div">
+                                    <div class="ui fluid image" id = "carb-icon-div">
 
                                         <div class="column">
                                             <img class="ui small centered image food-image" src="graphics/carb.png" id="carb-icon">
@@ -114,7 +114,7 @@
                             <div class="column">
                                 <div class="row">
 
-                                    <div id = "frui-icon-div">
+                                    <div class="ui fluid image" id = "frui-icon-div">
 
                                         <div class="column">
                                             <img class="ui small centered image food-image" src="graphics/frui.png" id="frui-icon">
