adding error msg when not enough stars

--- a/pet.html
+++ b/pet.html
@@ -92,7 +92,7 @@
 						</button>
 					</div>
 				</div>
-				
+			<div class="centered row" id="starsMsg"></div>
 			</div>
 		</div>
 	<!-- 	<div class="one wide column">
